# inline-proxy-poc

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
bazel/bpf/: defs.bzl  host_bpftool.bzl
deploy/: BUILD.bazel  Containerfile.installer  Containerfile.proxy  README.md
deploy/base/: caddy-demo.yaml  client-demo.yaml  kustomization.yaml  namespace.yaml  proxy-daemonset.yaml  proxy-installer-daemonset.yaml  rbac.yaml
deploy/scripts/: install-cni.sh  reconcile-cni.sh
docs/: architecture.md
docs/plans/: 2026-04-18-inline-proxy-poc-design.md  2026-04-18-inline-proxy-poc.md  2026-04-18-task-7-cni-yajl-k8s-lookup.md  2026-04-19-inline-proxy-k3s-status.md  2026-04-19-router-ingress-k3s-report.md
docs/superpowers/plans/: 2026-04-19-bpf-skeleton-loader.md  2026-04-19-router-style-inline-proxy.md  2026-04-27-cni-owned-bpf-attach.md  2026-04-30-cni-side-splice-reconciler.md  2026-05-06-real-yajl.md
docs/superpowers/specs/: 2026-04-19-bpf-skeleton-loader-design.md  2026-04-19-router-style-inline-proxy-design.md  2026-04-27-cni-owned-bpf-attach-design.md  2026-04-30-cni-side-splice-reconciler-design.md  2026-05-06-real-yajl-design.md
scripts/: regenerate_vmlinux_h.sh
src/: BUILD.bazel
src/bpf/: BUILD.bazel  ingress_redirect.bpf.c  ingress_redirect_common.h  loader.cpp  loader.hpp  tc_attach.cpp  tc_attach.hpp
src/cni/: BUILD.bazel  cni_args.cpp  cni_args.hpp  cni_types.cpp  cni_types.hpp  k8s_client.cpp  k8s_client.hpp  main.cpp  netns_resolver.cpp  netns_resolver.hpp  splice_executor.cpp  splice_executor.hpp  splice_plan.cpp  splice_plan.hpp  splice_repair.cpp  splice_repair.hpp  yajl_parser.cpp  yajl_parser.hpp
src/json/: BUILD.bazel  yajl_helpers.cpp  yajl_helpers.hpp
src/proxy/: BUILD.bazel  admin_http.cpp  admin_http.hpp  config.cpp  config.hpp  interface_registry.cpp  interface_registry.hpp  local_source.cpp  local_source.hpp  main.cpp  proxy_state.cpp  proxy_state.hpp  relay_session.cpp  relay_session.hpp  state_reconciler.cpp  state_reconciler.hpp  transparent_listener.cpp  transparent_listener.hpp  transparent_socket.cpp  transparent_socket.hpp
src/shared/: BUILD.bazel  core.hpp  event_loop.cpp  event_loop.hpp  netlink.cpp  netlink.hpp  netlink_builder.cpp  netlink_builder.hpp  netns.cpp  netns.hpp  run_ip.cpp  run_ip.hpp  scoped_fd.cpp  scoped_fd.hpp  sockaddr.cpp  sockaddr.hpp  state_store.cpp  state_store.hpp
tests/: BUILD.bazel  admin_connection_send_test.cpp  admin_http_test.cpp  bpf_attacher_test.cpp  bpf_loader_test.cpp  cni_add_del_test.cpp  cni_args_test.cpp  cni_netns_resolver_test.cpp  cni_yajl_parser_test.cpp  deploy_manifest_test.cpp  ebpf_intercept_fd_netns_test.cpp  event_loop_test.cpp  fd_netns_harness.cpp  fd_netns_harness.hpp  interface_registry_test.cpp  json_yajl_helpers_test.cpp  k8s_client_test.cpp  netns_fixture.cpp  netns_fixture.hpp  project_layout_test.cpp  proxy_daemon_config_test.cpp  relay_session_close_callback_test.cpp  relay_session_test.cpp  scoped_fd_close_test.cpp  shared_linux_test.cpp  splice_executor_netns_test.cpp  splice_plan_test.cpp  splice_repair_netns_test.cpp  splice_repair_test.cpp  state_reconciler_test.cpp  transparent_relay_netns_test.cpp  transparent_socket_test.cpp
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
