# Root BUILD file for inline_proxy_poc

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

exports_files([
    "MODULE.bazel",
    ".bazelrc",
])

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        "//src/...": "",
        "//tests/...": "",
        "//third_party/...": "",
    },
    exclude_external_sources = True,
)
