"""Bazel module configuration for the inline proxy PoC."""

module(
    name = "inline_proxy_poc",
    version = "0.1.0",
)

# ============================================================================
# Core Build Rules
# ============================================================================

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "yajl", version = "0.0.0")
bazel_dep(name = "libbpf", version = "0.0.0")

local_path_override(module_name = "yajl", path = "third_party/yajl")
local_path_override(module_name = "libbpf", path = "third_party/libbpf")

# ============================================================================
# Host-installed bpftool (build-time only)
# ============================================================================

host_bpftool_ext = use_extension("//bazel/bpf:host_bpftool.bzl", "host_bpftool")
use_repo(host_bpftool_ext, "host_bpftool")

# ============================================================================
# Testing
# ============================================================================

bazel_dep(name = "googletest", version = "1.15.2")

# ============================================================================
# Development Tools
# ============================================================================

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)
