cc_test(
    name = "project_layout_test",
    srcs = ["project_layout_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
    ],
    data = [
        "//src/shared:BUILD.bazel",
        "//src/proxy:BUILD.bazel",
        "//src/cni:BUILD.bazel",
        "//src/bpf:BUILD.bazel",
        "//deploy:README.md",
    ],
)

cc_test(
    name = "shared_linux_test",
    srcs = ["shared_linux_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
        "//src/shared:shared",
    ],
)

cc_test(
    name = "scoped_fd_close_test",
    srcs = ["scoped_fd_close_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
        "//src/shared:shared",
    ],
)


cc_test(
    name = "admin_http_test",
    srcs = ["admin_http_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
        "//src/proxy:proxy",
    ],
)


cc_test(
    name = "event_loop_test",
    srcs = ["event_loop_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
        "//src/shared:shared",
    ],
)


cc_test(
    name = "transparent_socket_test",
    srcs = ["transparent_socket_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
        "//src/proxy:proxy",
        "//src/shared:shared",
    ],
)

cc_test(
    name = "relay_session_test",
    srcs = ["relay_session_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
        "//src/proxy:proxy",
        "//src/shared:shared",
    ],
)

cc_test(
    name = "proxy_daemon_config_test",
    srcs = ["proxy_daemon_config_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
        "//src/proxy:proxy",
    ],
)

cc_test(
    name = "interface_registry_test",
    srcs = ["interface_registry_test.cpp"],
    deps = [
        "@googletest//:gtest_main",
        "//src/proxy:proxy",
    ],
)
