load("//bazel/bpf:defs.bzl", "bpf_skeleton")

package(default_visibility = ["//visibility:public"])

exports_files([
    "BUILD.bazel",
    "ingress_redirect.bpf.c",
    "ingress_redirect_common.h",
])

bpf_skeleton(
    name = "ingress_redirect_skel",
    src = "ingress_redirect.bpf.c",
    hdrs = [
        "ingress_redirect_common.h",
        "vmlinux.h",
    ],
)

cc_library(
    name = "loader",
    srcs = ["loader.cpp"],
    hdrs = [
        "ingress_redirect_common.h",
        "loader.hpp",
    ],
    deps = [
        ":ingress_redirect_skel",
        "//src/shared:shared",
        "@libbpf//:libbpf",
    ],
    include_prefix = "bpf",
)
