package(default_visibility = ["//visibility:public"])

exports_files(["BUILD.bazel"])

cc_library(
    name = "proxy",
    srcs = [
        "admin_http.cpp",
        "config.cpp",
        "interface_registry.cpp",
        "local_source.cpp",
        "proxy_state.cpp",
        "state_reconciler.cpp",
        "relay_session.cpp",
        "transparent_listener.cpp",
        "transparent_socket.cpp",
    ],
    hdrs = [
        "admin_http.hpp",
        "config.hpp",
        "interface_registry.hpp",
        "local_source.hpp",
        "proxy_state.hpp",
        "state_reconciler.hpp",
        "relay_session.hpp",
        "transparent_listener.hpp",
        "transparent_socket.hpp",
    ],
    deps = [
        "//src/bpf:loader",
        "//src/shared:shared",
    ],
    include_prefix = "proxy",
)

cc_binary(
    name = "proxy_daemon",
    srcs = ["main.cpp"],
    deps = [
        ":proxy",
        "//src/shared:core",
    ],
)
