package(default_visibility = ["//visibility:public"])

exports_files(["BUILD.bazel"])

cc_library(
    name = "shared",
    srcs = [
        "event_loop.cpp",
        "netlink.cpp",
        "netlink_builder.cpp",
        "netns.cpp",
        "run_ip.cpp",
        "scoped_fd.cpp",
        "sockaddr.cpp",
        "state_store.cpp",
    ],
    hdrs = [
        "core.hpp",
        "event_loop.hpp",
        "netlink.hpp",
        "netlink_builder.hpp",
        "netns.hpp",
        "run_ip.hpp",
        "scoped_fd.hpp",
        "sockaddr.hpp",
        "state_store.hpp",
    ],
    include_prefix = "shared",
)

cc_library(
    name = "core",
    hdrs = ["core.hpp"],
    deps = [":shared"],
    include_prefix = "shared",
)
